--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>thekarantimalsina</title>
     <link rel="stylesheet" href="port.css">
 </head>
 <body>
@@ -11,11 +11,12 @@
         <div class="container">
             <h1>The Karan Timalsina</h1>
             <div class="logo-container">
-              <img src="foweoif.png" alt="Logo" class="logo">
+              <img src="img/foweoif.png" alt="Logo" class="logo">
           </div>
             <nav>
                 <ul>
                     <li><a href="#about">About Me</a></li>
+                    <li><a href="#port">Portfolio</a></li>
                     <li><a href="#work">My Work</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -29,17 +30,21 @@
             <p>Welcome! I am a passionate graphic designer and video editor with a keen eye for detail and a love for creativity. My work combines innovative design with high-quality video production.</p>
         </div>
     </section>
-
+    <section id="port">
+        <div class="container">
+            <h2> Portfolio</h2>
+        </div>
+    </section>
     <section id="work">
         <div class="container">
             <h2>My Work</h2>
             <div class="work-gallery">
                 <div class="work-item">
-                    <img src="graphic-design-sample1.jpg" alt="Graphic Design Sample 1">
+                    <img src="img/FINAL.jpg" alt="Graphic Design Sample 1">
                     <h3>Graphic Design</h3>
                 </div>
                 <div class="work-item">
-                    <img src="graphic-design-sample2.jpg" alt="Graphic Design Sample 2">
+                    <img src="img/jj.png" alt="Graphic Design Sample 2">
                     <h3>Graphic Design</h3>
                 </div>
                 <div class="work-item">
@@ -57,7 +62,7 @@
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:yourname@example.com">yourname@example.com</a> or connect with me on social media.</p>
+            <p>If you'd like to get in touch, feel free to email me at <a href="mailto:yourname@example.com">1karan2timalsina3@gmail.com</a> or connect with me on social media.</p>
         </div>
     </section>
 
@@ -68,4 +73,7 @@
     </footer>
 </body>
 </html>
+
+
+
 
